Update Blog “2019-04-23-22-жовтня-відбулося-феєричне-відкриття-хі-фестивалю-комедії”

--- a/content/blog/2019-04-23-22-жовтня-відбулося-феєричне-відкриття-хі-фестивалю-комедії.md
+++ b/content/blog/2019-04-23-22-жовтня-відбулося-феєричне-відкриття-хі-фестивалю-комедії.md
@@ -1,5 +1,5 @@
 ---
-title: 22 жовтня відбулося феєричне відкриття ХІ фестивалю комедії
+title: 22 Жовтня Відбулося Феєричне Відкриття ХІ Фестивалю Комедії
 date: 2019-04-23T19:51:58.999Z
 description: >-
   Вітаю усіх учасників і чернівецького глядача особливо: 11-денне свято театру в
