Update Blog “2019-04-24-new-title”

--- a/content/blog/2019-04-24-new-title.md
+++ b/content/blog/2019-04-24-new-title.md
@@ -1,6 +1,22 @@
 ---
-title: New title
+title: >-
+  Про залицяння і женихання тих, кому за 60, зі сцени чернівецького театру
+  розповідали івано-франківські актори
 date: 2019-04-24T07:03:58.418Z
 description: Description
 ---
-Body
+В рамках 11-го фестивалю комедії "Золоті оплески Буковини" в Чернівецькому академічному обласному музично-драматичному театрі імені Ольги Кобилянської 24 жовтня відбулася вистава "За дверима бажань". Ліричну комедію за п’єсою сучасного драматурга Андрія Іванова "Божі кульбабки" блискуче зіграли актори Івано-Франківського академічного обласного українського музично-драматичного театру імені Івана Франка, пише molbuk.ua
+
+![](/img/1477351647_img_20161024_201951-01.jpg)
+
+За сюжетом, 60-річна Анастасія вирішила підшукати своїй 70-річній сестрі Мальвіні другу половинку, а тому звертається до шлюбного агентства "Єлена і Паріс". Вже вранці сестри зустрічають не одного, а цілих трьох імовірних "женихів", навколо суперництва яких закручується весь сюжет.
+
+![](/img/1477351695_img_20161024_203607-01.jpg)
+
+Сцени доповнюють іронічні жарти "бабусь-сміхотусь", через які протягом трьох годин вистави глядачі не могли стримати сміху. Мальвіна, "юна наречена", як вона себе з усміхом називає, насміхається над можливістю заміжжя у своєму віці і вважає ідею сестри божевільною, проте знайшла спільну мову із сантехніком - любителем горілки, який саме прийшов лагодити кран на кухні. Настя вперто прагне знайти їй кращого жениха, аби та не залишилася самотньою, та серед кандидатів знаходить і для себе цікавого співбесідника, який поділяє її любов до театру та Шекспіра. Протягом дії героїня те і робить, що намагається влаштувати міні-вистави: то розігрує діалог Джульєтти з Ромео, то вмовляє зобразити дві щасливі подружні пари людей, які знайомі всього дві години. Цим вона підтверджує знамениті слова великого англійця: "Життя - це гра, і всі ми в ній - актори".
+
+![](/img/1477351717_img_20161024_193524-01.jpg)
+
+Порівняно з цілим спектаклем, що дарував сміх та позитив, дуже проникливим видався фінальний монолог Насті, де вона розмірковує над сенсом прожитого життя і можливістю щастя. Чоловік, якого вона покинула 30 років тому, зіпсував їй кар`єру великої артистки; чоловік, якого вона нарешті вподобала, виявився пройдисвітом, "залицяльником на один день". Але вона вірить: "Хоч раз в житті треба бути щасливою!". Під час монологу актриса по-справжньому плакала, що дуже перейняло глядачів.
+
+По завершенню вистави зала вибухнула довгими оплесками, акторський склад кілька разів виходив на поклін до глядачів.
