Update Blog “2019-04-24-new-title”

--- a/content/blog/2019-04-24-new-title.md
+++ b/content/blog/2019-04-24-new-title.md
@@ -3,7 +3,13 @@ title: >-
   Про залицяння і женихання тих, кому за 60, зі сцени чернівецького театру
   розповідали івано-франківські актори
 date: 2019-04-24T07:03:58.418Z
-description: Description
+description: >-
+  В рамках 11-го фестивалю комедії "Золоті оплески Буковини" в Чернівецькому
+  академічному обласному музично-драматичному театрі імені Ольги Кобилянської 24
+  жовтня відбулася вистава "За дверима бажань". Ліричну комедію за п’єсою
+  сучасного драматурга Андрія Іванова "Божі кульбабки" блискуче зіграли актори
+  Івано-Франківського академічного обласного українського музично-драматичного
+  театру імені Івана Франка, пише molbuk.ua
 ---
 В рамках 11-го фестивалю комедії "Золоті оплески Буковини" в Чернівецькому академічному обласному музично-драматичному театрі імені Ольги Кобилянської 24 жовтня відбулася вистава "За дверима бажань". Ліричну комедію за п’єсою сучасного драматурга Андрія Іванова "Божі кульбабки" блискуче зіграли актори Івано-Франківського академічного обласного українського музично-драматичного театру імені Івана Франка, пише molbuk.ua
 
