--- a/content/blog/2020-03-08-про-кохання-під-час-війни-та-гадання-на-кавовій-гущі-чернігівська-актриса-виступила-в-чернівцях-з-моновиставою.md
+++ b/content/blog/2020-03-08-про-кохання-під-час-війни-та-гадання-на-кавовій-гущі-чернігівська-актриса-виступила-в-чернівцях-з-моновиставою.md
@@ -1,7 +1,5 @@
 ---
-title: >-
-  Про кохання під час війни та гадання на кавовій гущі: чернігівська актриса
-  виступила в чернівцях з моновиставою
+title: Про кохання під час війни та гадання на кавовій гущі
 date: 2020-03-07T22:07:33.390Z
 description: >-
   В рамках проведення 11-го фестивалю комедії "Золоті оплески Буковини" 25
